--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -67,7 +67,7 @@
             <mat-select placeholder="Language Choice" class="select_menu " i18n='@@lang_choice'>
               <mat-option value="option" i18n='@@lang_option_ru' (click)="changeLang('ru')">Russian</mat-option>
               <mat-option value="option" i18n='@@lang_option_en' (click)="changeLang('en')">English</mat-option>
-              <mat-option value="option" i18n='@@lang_option_lv'>Latvian</mat-option>
+              <!-- <mat-option value="option" i18n='@@lang_option_lv'>Latvian</mat-option> -->
           </mat-select>
           </mat-form-field>
 
