--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -128,6 +128,50 @@ section {
   }
 }
 
+
+@media (max-width: 1150px) {
+  .intro {
+
+    p {
+      text-align: center;
+      width: 580px;
+    }
+  }
+
+  .education {
+    .unit {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      img {
+        width: 500px;
+        height: 300px;
+        justify-self: center;
+        margin-left: 50px;
+        margin-bottom: 30px;
+      }
+
+      .content {
+        text-align: right;
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+
+        h3 {
+          color: #226f0a;
+          font-size: 158%;
+        }
+
+        p {
+          width: 520px;
+        }
+      }
+    }
+  }
+}
+
+
 @media (max-width: 600px) {
   .intro {
 
@@ -139,10 +183,6 @@ section {
 
   .education {
     .unit {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
       img {
         width: 300px;
         height: 180px;
@@ -153,9 +193,6 @@ section {
 
       .content {
         text-align: right;
-        display: flex;
-        flex-direction: column;
-        justify-self: center;
 
         h3 {
           color: #226f0a;
