--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,7 +5,7 @@
       <mat-select placeholder="Choice Language" class="select_menu">
         <mat-option value="option" i18n='@@lang_option_ru' (click)="changeLang('ru')" >Russian</mat-option>
         <mat-option value="option" i18n='@@lang_option_en' (click)="changeLang('en')">English</mat-option>
-        <mat-option value="option" i18n='@@lang_option_lv'>Latvian</mat-option>
+        <!-- <mat-option value="option" i18n='@@lang_option_lv'>Latvian</mat-option> -->
       </mat-select>
     </mat-form-field>
   </div>
