--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -75,7 +75,12 @@ mat-sidenav-content {
     background-color: rgba($color: $main-color, $alpha: 0.8);
     position: fixed;
     z-index: 10000000;
-
+    button{
+      img{
+        width: 32px;
+        height: 32px;
+      }
+    }
     .logo {
       border-radius: 50%;
       padding: 5px 15px;
