Add text for education blok on About me page and localization for it

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,8 @@
 <section class="intro">
   <img src="./../../assets/img/myphoto.jpg" alt="MyPhoto">
   <h2 i18n='@@about_name'>Andrey Shorstkin</h2>
-  <p class="text" i18n='@@about_par_1'>My name is Andrey. I am European Union citizen and was born in Riga, Latvia. I am speaking on 3
+  <p class="text" i18n='@@about_par_1'>My name is Andrey. I am European Union citizen and was born in Riga, Latvia. I am
+    speaking on 3
     languages. It is English, Russian and Latvian. I have started learning programming in 15 years old and I immediately
     realized that programming is the thing of my life. I have had several hobbies like gym, finance sciences and rock
     climbing. I am already have had experience in working in several companies like my last job in Arcona ltd. where I
@@ -111,19 +112,20 @@
     <img src="../../assets/img/riga80.jpg" alt="">
     <div class="content">
       <h3 i18n='@@about_educ_s_1'>Rigas 80. Secondary School</h3>
-      <p> Ех вис идяуе легере. Те хас етиам апеириан инсоленс. Еос цу семпер менандри. Ин нец диам граеци. Мазим лудус
-        аццумсан сит ут.
-        Сенсибус адолесценс ет хис, яуо ан фиерент атоморум цонцептам, но ерос епицуреи алияуандо про. Ет реяуе партиенд
+      <p i18n='@@about_educ_des_1'>
+        Rigas 80 is a school in Latvia where I received basic education up to grade 10. In total, we studied 14 subjects
+        from the humanities such as Russian, Latvian, English and World History to the exact sciences like chemistry,
+        physics and mathematics
       </p>
     </div>
   </div>
   <div class="unit">
     <img src="../../assets/img/prog.jpg" alt="">
     <div class="content">
-      <h3 i18n='@@about_educ_s_2'>Progmesisters </h3>
-      <p> Ех вис идяуе легере. Те хас етиам апеириан инсоленс. Еос цу семпер менандри. Ин нец диам граеци. Мазим лудус
-        аццумсан сит ут.
-        Сенсибус адолесценс ет хис, яуо ан фиерент атоморум цонцептам, но ерос епицуреи алияуандо про. Ет реяуе партиенд
+      <h3 i18n='@@about_educ_s_2'>Progmeistars </h3>
+      <p i18n='@@about_educ_des_2'> In Progmeistars, I studied the basics of Computer Science based on 2 programming languages: Pascal and Object
+        Pascal (on which we got OOP and on which we created applications for Windows), the course also included the
+        basics of algorithms and basic knowledge of HTML and CSS
       </p>
     </div>
   </div>
@@ -131,9 +133,10 @@
     <img src="../../assets/img/earsclife.jpg" alt="">
     <div class="content">
       <h3 i18n='@@about_educ_s_3'>Earlscliffe college</h3>
-      <p> Ех вис идяуе легере. Те хас етиам апеириан инсоленс. Еос цу семпер менандри. Ин нец диам граеци. Мазим лудус
-        аццумсан сит ут.
-        Сенсибус адолесценс ет хис, яуо ан фиерент атоморум цонцептам, но ерос епицуреи алияуандо про. Ет реяуе партиенд
+      <p i18n='@@about_educ_des_3'> In EC, I went through an A level training program, in which I studied in depth 5 subjects: Economics,
+        Mathematics, Physics, Russian and Geography, after this training program I have accumulated a comprehensive
+        supply of knowledge in such fields as finance, social sciences, as well as deep understanding of mathematics as
+        a science and physics which operates on it
       </p>
     </div>
   </div>
@@ -141,14 +144,13 @@
     <img src="../../assets/img/essex.jpg" alt="">
     <div class="content">
       <h3 i18n='@@about_educ_s_4'>Essex University</h3>
-      <p> Ех вис идяуе легере. Те хас етиам апеириан инсоленс. Еос цу семпер менандри. Ин нец диам граеци. Мазим лудус
-        аццумсан сит ут.
-        Сенсибус адолесценс ет хис, яуо ан фиерент атоморум цонцептам, но ерос епицуреи алияуандо про. Ет реяуе партиенд
+      <p i18n='@@about_educ_des_4'> Since 2019, I began studying Computer Science at Essex University, where I plan to delve into topics such as
+        artificial intelligence and machine learning
       </p>
     </div>
   </div>
 </section>
 
 <section class="contact">
-  <div class="contact__btn"><a routerLink="/contact" ><b i18n='@@about_contact'>CONTACT</b></a></div>
+  <div class="contact__btn"><a routerLink="/contact"><b i18n='@@about_contact'>CONTACT</b></a></div>
 </section>
