--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -64,7 +64,7 @@
             <li>© Copyright 2019</li>
           </ul>
           <mat-form-field>
-            <mat-select placeholder="Language Choice" class="select_menu " i18n='@@lang_choice'>
+            <mat-select placeholder="Language Choice" class="select_menu " i18n-placeholder='@@lang_choice'>
               <mat-option value="option" i18n='@@lang_option_ru' (click)="changeLang('ru')">Russian</mat-option>
               <mat-option value="option" i18n='@@lang_option_en' (click)="changeLang('en')">English</mat-option>
               <!-- <mat-option value="option" i18n='@@lang_option_lv'>Latvian</mat-option> -->
