--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -16,7 +16,7 @@
       </mat-list>
   </mat-sidenav>
 
-  <mat-sidenav-content>
+  <mat-sidenav-content #content cdkScrollable >
     <mat-toolbar>
       <button
         mat-button
