fix bags with logo in header and h1 intro ellement

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div layout="row" class="section_1">
   <div class="intro">
-    <h1 class="fadeIn">Andrey Shorstkin</h1>
+    <h1>Andrey Shorstkin</h1>
     <mat-form-field>
       <mat-select placeholder="Choice Language" class="select_menu">
         <mat-option value="option" i18n='@@lang_option_ru' (click)="changeLang('ru')" >Russian</mat-option>
