--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -65,7 +65,7 @@ $gold-color: #E3C322;
 
 
     h1 {
-      margin-bottom: 290px;
+      margin-bottom: 95%;
       font-family: $font-main;
     }
 
