--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -49,6 +49,7 @@ $animation-color: white; // annimation color of button hover
 
         img {
           width: 80px;
+          height: 80px;
           margin-left: -80px;
         }
       }
