Add 1. Blog main page 2. Category  element 3. category block( need to edit) 4. article element

--- a/src/app/blog/article-element/article-element.component.html
+++ b/src/app/blog/article-element/article-element.component.html
@@ -1,1 +1,8 @@
-<p>article-element works!</p>
+<article>
+  <img src="/assets/img/blog/new_art_1.jpg" alt="imageOfArticle">
+  <h2>Затерянный город в Китае</h2>
+  <p>С другой стороны новая модель организационной деятельности обеспечивает актуальность всесторонне сбалансированных
+    нововведений? Задача организации, в особенности же консультация с профессионалами из IT обеспечивает актуальность
+    экономической целесообразности принимаемых решений. Равным образом новая модель организационной деятельности в
+    значительной степени обуславливает создание соответствующих условий активизации?</p>
+</article>
