--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,18 +1,18 @@
-<section class="Blog-intro">
-  <h1>Блог</h1>
-  <img src="" alt="decoration">
+<section class="blog-intro">
+  <strong><h1>Блог</h1></strong>
+  <img src="/assets/img/blog/text_dec.png" alt="decoration">
   <p>Товарищи! реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации соответствующий
     условий активизации.Товарищи! реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации
     соответствующий условий активизации.Товарищи! реализация намеченных плановых заданий влечет за собой процесс внедрения
     и модернизации соответствующий условий ак.</p>
 </section>
-<section class="blog-section">
+<section class="blog-category">
   <div class="sec__header">
     <hr>
     <h2 i18n='@@title_1'>Раздел Блога</h2>
     <hr>
   </div>
-  <app-blog-section-module></app-blog-section-module>
+  <app-category></app-category>
 </section>
 <section class="blog-section">
   <div class="sec__header">
@@ -20,5 +20,7 @@
     <h2 i18n='@@title_2'>Последнии статьи</h2>
     <hr>
   </div>
+  <app-article-element></app-article-element>
+  <app-article-element></app-article-element>
   <app-article-element></app-article-element>
 </section>
