Fix portfolio bag, add user-page(will be needed to updaate), add auth page, update article elements

--- a/src/app/blog/article-element/article-element.component.html
+++ b/src/app/blog/article-element/article-element.component.html
@@ -1,5 +1,5 @@
 <article>
-  <img src="/assets/img/blog/new_art_1.jpg" alt="imageOfArticle">
+  <img src="/assets/img/blog/new_art_1.jpg" alt="imageOfArticle" routerLink="/blog/article">
   <h2>Затерянный город в Китае</h2>
   <p>С другой стороны новая модель организационной деятельности обеспечивает актуальность всесторонне сбалансированных
     нововведений? Задача организации, в особенности же консультация с профессионалами из IT обеспечивает актуальность
