--- a/src/app/blog/article-list/article-list.component.html
+++ b/src/app/blog/article-list/article-list.component.html
@@ -1,1 +1,22 @@
-<p>article-list works!</p>
+<section>
+  <h1>Экономика</h1>
+  <mat-form-field>
+    <mat-label>Фильтр по статьям</mat-label>
+    <mat-select>
+      <mat-option> Микро- экономика</mat-option>
+      <mat-option> Макро- экономика</mat-option>
+      <mat-option> Финансы</mat-option>
+      <mat-option> Инвестиции</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <app-article-element></app-article-element>
+  <app-article-element></app-article-element>
+  <app-article-element></app-article-element>
+  <app-article-element></app-article-element>
+  <app-article-element></app-article-element>
+  <app-article-element></app-article-element>
+
+  <button mat-stroked-button >Предыдущая</button>
+  <button mat-stroked-button>Следущая</button>
+</section>
