--- a/src/app/blog/article/article-comment/article-comment.component.html
+++ b/src/app/blog/article/article-comment/article-comment.component.html
@@ -1,1 +1,11 @@
-<p>article-comment works!</p>
+<div class="comment">
+  <div class="label">
+    <div class="profile_image"></div>
+    <h2>Никита Шорсткин</h2>
+  </div>
+  <p>С другой стороны выбранный нами инновационный путь требует от нас анализа системы масштабного изменения ряда
+    параметров. Дорогие друзья, консультация с профессионалами из IT представляет собой интересный эксперимент проверки
+    позиций, занимаемых участниками в отношении поставленных задач! Не следует, однако, забывать о том, что
+    социально-экономическое развитие влечет за собой процесс внедрения и модернизации системы масштабного изменения ряда
+    параметров.</p>
+</div>
