--- a/src/app/blog/article/article.component.html
+++ b/src/app/blog/article/article.component.html
@@ -1,1 +1,35 @@
-<p>article works!</p>
+<article>
+  <div class="art_image"></div>
+  <h2>Реструктуризация финансовых рынков</h2>
+  <p>С другой стороны новая модель организационной деятельности обеспечивает актуальность всесторонне сбалансированных
+    нововведений? Задача организации, в особенности же консультация с профессионалами из IT обеспечивает актуальность
+    экономической целесообразности принимаемых решений. Равным образом новая модель организационной деятельности в
+    значительной степени обуславливает создание соответствующих условий активизации?
+  </p>
+
+  <p>С другой стороны новая модель организационной деятельности обеспечивает актуальность всесторонне сбалансированных
+    нововведений? Задача организации, в особенности же консультация с профессионалами из IT обеспечивает актуальность
+    экономической целесообразности принимаемых решений. Равным образом новая модель организационной деятельности в
+    значительной степени обуславливает создание соответствующих условий активизации?
+  </p>
+
+  <p>С другой стороны новая модель организационной деятельности обеспечивает актуальность всесторонне сбалансированных
+    нововведений? Задача организации, в особенности же консультация с профессионалами из IT обеспечивает актуальность
+    экономической целесообразности принимаемых решений. Равным образом новая модель организационной деятельности в
+    значительной степени обуславливает создание соответствующих условий активизации?
+  </p>
+
+  <p>С другой стороны новая модель организационной деятельности обеспечивает актуальность всесторонне сбалансированных
+    нововведений? Задача организации, в особенности же консультация с профессионалами из IT обеспечивает актуальность
+    экономической целесообразности принимаемых решений. Равным образом новая модель организационной деятельности в
+    значительной степени обуславливает создание соответствующих условий активизации?
+  </p>
+
+  <h2>Коментарии</h2>
+  <hr>
+  <app-article-comment></app-article-comment>
+  <app-article-comment></app-article-comment>
+  <app-article-comment></app-article-comment>
+  <app-article-comment></app-article-comment>
+  <app-article-comment></app-article-comment>
+</article>
