--- a/src/app/blog/category/category-element/category-element.component.html
+++ b/src/app/blog/category/category-element/category-element.component.html
@@ -1,5 +1,5 @@
 
 <div class="category_button">
-  <a href="/"><div class="circle"></div></a>
-  <a href="/"><h3>Экономика</h3></a>
+  <a routerLink="/blog/article-list"><div class="circle"></div></a>
+  <a routerLink="/blog/article-list"><h3>Экономика</h3></a>
 </div>
