--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -7,7 +7,8 @@
           <mat-list-item role="listitem"><a matLine routerLink="/" i18n='@@nav_home'>Home</a>  </mat-list-item>
           <mat-list-item role="listitem"><a matLine routerLink="/me" i18n='@@nav_abme'>About Me</a></mat-list-item>
           <mat-list-item role="listitem"><a matLine routerLink="/portfolio" i18n='@@nav_por'>Portfolio</a></mat-list-item>
-          <mat-list-item role="listitem"><a matLine routerLink="/blog" i18n='@@nav_por'>blog</a></mat-list-item>
+          <mat-list-item role="listitem"><a matLine routerLink="/blog" i18n='@@nav_por'>Blog</a></mat-list-item>
+          <mat-list-item role="listitem"><a matLine routerLink="/blog/auth" i18n='@@nav_por'>Login</a></mat-list-item>
           <div class="last">
             <mat-list-item role="listitem" routerLink="/contact" i18n='@@nav_contact'><a>Contacts</a></mat-list-item>
             <img src="../../assets/img/plus.png" alt="plus">
@@ -33,8 +34,7 @@
         <div class="btn_menu"><a routerLink="me" i18n='@@nav_abme'>About Me</a></div>
         <div class="btn_menu"><a routerLink="/portfolio" i18n='@@nav_por'>Portfolio</a></div>
         <div class="btn_menu"><a routerLink="/blog" i18n='@@nav_por'>Blog</a></div>
-        <!-- <div class="btn_menu"><a routerLink="/">Блог</a></div>
-        <div class="btn_menu"><a routerLink="/">Услуги</a></div> -->
+        <div class="btn_menu"><a routerLink="/blog/auth" i18n='@@nav_por'>Login</a></div>
         <div class="btn_menu"><a routerLink="/contact" i18n='@@nav_contact'>Contacts</a></div>
       </div>
     </mat-toolbar>
