--- a/src/app/portfolio/portfolio-min/portfolio-min.component.scss
+++ b/src/app/portfolio/portfolio-min/portfolio-min.component.scss
@@ -38,6 +38,7 @@ $black: rgb(228, 198, 49);
     min-width: 230px;
     max-width: 900px;
     width: 100%;
+    height: 400px;
     -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
 
