--- a/src/app/blog/signup-signin/signup-signin.component.html
+++ b/src/app/blog/signup-signin/signup-signin.component.html
@@ -9,8 +9,9 @@
       <mat-label>Пароль</mat-label>
       <input matInput placeholder="Ведите пароль">
     </mat-form-field>
-    <button mat-stroked-button color="primary">Воити </button>
+    <button mat-stroked-button color="primary"  routerLink="/blog/admin">Воити </button>
   </section>
+
   <section class="signup">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
